--- a/AsignaturasPosgrado.bib
+++ b/AsignaturasPosgrado.bib
@@ -1,573 +1,419 @@
-@unpublished{teach:ITSA:ProgramacionSistemasI:2005enejun,
-    title   = {Programación de Sistemas I},
-    year    = {2005},
-    howpublished = {ITSA},
-    month = 06,
-    howpublished = {ITSA — ene-jun 05}
+@misc{ProcesadoresDigitales_may_2010a,
+  title        = {Procesadores Digitales},
+  howpublished = {ene-may},
+  month        = {05},
+  year         = {2010}
 }
 
-@unpublished{teach:ITSA:SeminarioSistemasDigitales:2005julago,
-  title   = {Seminario de Sistemas Digitales y sus Aplicaciones},
-  year    = {2005},
-    howpublished = {ITSA},
-    month = 08,
-
-  howpublished = {ITSA — jul-ago 05}
-}
-
-@unpublished{teach:ITSA:SistemasDigitales:2005agodic,
-  title   = {Sistemas Digitales},
-  year    = {2005},
-    howpublished = {ITSA},
-    month = 12,
-
-  howpublished = {ITSA — ago-dic 05}
-}
-
-@unpublished{teach:ITSA:ArquitecturaComputadorasII:2005agodic,
-  title   = {Arquitectura de Computadoras II},
-  year    = {2005},
-    howpublished = {ITSA},
-    month = 12,
-  howpublished = {ITSA — ago-dic 05}
-}
-
-@unpublished{teach:ITSA:ArquitecturaComputadorasI:2006enejun,
-  title   = {Arquitectura de Computadoras I},
-  year    = {2006},
-    howpublished = {ITSA},
-    month = 06,
-  howpublished = {ITSA — ene-jun 06}
-}
-
-@unpublished{teach:ITSA:ArquitecturaComputadorasII:2006enejun,
-  title   = {Arquitectura de Computadoras II},
-  year    = {2006},
-    howpublished = {ITSA},
-    month = 06,
-  howpublished = {ITSA — ene-jun 06}
-}
-
-@unpublished{teach:ITSA:ProgramacionSistemasI:2006julago,
-  title   = {Programación de Sistemas I},
-  year    = {2006},
-    howpublished = {ITSA},
-    month = 08,
-  howpublished = {ITSA — jul-ago 06}
-}
-
-@unpublished{teach:ITSA:LenguajeEnsamblador:2006agodic,
-  title   = {Lenguaje Ensamblador},
-  year    = {2006},
-    howpublished = {ITSA},
-    month = 12,
-  howpublished = {ITSA — ago-dic 06}
-}
-
-@unpublished{teach:UPP:HerramientasOfimaticas:2006sepdic,
-  title   = {Herramientas Ofimáticas},
-  year    = {2006},
-    howpublished = {UPP},
-    month = 12,
-  howpublished = {UPP — sep-dic 06}
-}
-
-@unpublished{teach:UPP:ArquitecturasAvanzadas:2006sepdic,
-  title   = {Arquitecturas Avanzadas de Computadoras},
-  year    = {2006},
-    howpublished = {UPP},
-    month = 12,
-  howpublished = {UPP — sep-dic 06}
-}
-
-@unpublished{teach:ITSA:Interfases:2007enejun,
-  title   = {Interfases},
-  year    = {2007},
-    howpublished = {ITSA},
-    month = 06,
-  howpublished = {ITSA — ene-jun 07}
-}
-
-@unpublished{teach:ITSA:LenguajeEnsamblador:2007agodic,
-  title   = {Lenguaje Ensamblador},
-  year    = {2007},
-    month = 12,
-    howpublished = {ITSA — ago-dic 07}
-}
-
-@unpublished{teach:ITSA:GraficacionComputadora:2007agodic,
-  title   = {Graficación por Computadora},
-  year    = {2007},
-    month = 12,
-    howpublished = {ITSA — ago-dic 07}
-}
-
-@unpublished{teach:ITSA:Interfases:2008enejun,
-  title   = {Interfases},
-  year    = {2008},
-    month = 06,
-    howpublished = {ITSA — ene-jun 08}
-}
-
-@unpublished{teach:ITSA:InteligenciaArtificial:2008enejun,
-  title   = {Inteligencia Artificial},
-  year    = {2008},
-    month = 06,
-    howpublished = {ITSA — ene-jun 08}
-}
-
-@unpublished{teach:ITSA:LenguajeEnsamblador:2008agodic,
-  title   = {Lenguaje Ensamblador},
-  year    = {2008},
-    month = 12,
-    howpublished = {ITSA — ago-dic 08}
+@misc{ProcesadoresDigitales_dic_2010b,
+  title        = {Procesadores Digitales},
+  howpublished = {ago-dic},
+  month        = {12},
+  year         = {2010}
 }
 
-@unpublished{teach:ITSA:GraficacionComputadora:2008agodic,
-  title   = {Graficación por Computadora},
-  year    = {2008},
-    month = 12,
-    howpublished = {ITSA — ago-dic 08}
+@misc{TopicosAvanzadosIA_dic_2010,
+  title        = {Tópicos Avanzados de Inteligencia Artificial},
+  howpublished = {ago-dic},
+  month        = {12},
+  year         = {2010}
 }
 
-@unpublished{teach:ITSA:Interfases:2009enejun,
-  title   = {Interfases},
-  year    = {2009},
-    month = 06,
- howpublished = {ITSA — ene-jun 09}
+@misc{ProcesadoresDigitales_may_2011a,
+  title        = {Procesadores Digitales},
+  howpublished = {ene-may},
+  month        = {05},
+  year         = {2011}
 }
 
-@unpublished{teach:ITSA:InteligenciaArtificial:2009enejun,
-  title   = {Inteligencia Artificial},
-  year    = {2009},
-    month = 06,
- howpublished = {ITSA — ene-jun 09}
+@misc{ProcesadoresDigitalesControl_may_2011,
+  title        = {Procesadores Digitales y Control Secuencial},
+  howpublished = {ene-may},
+  month        = {05},
+  year         = {2011}
 }
 
-@unpublished{teach:UPV:CircuitosLogicos:2009sepdic,
-  title   = {Circuitos Lógicos},
-  year    = {2009},
-    month = 12,
- howpublished = {UPV — sep-dic 09}
+@misc{ProcesadoresDigitales_ago_2011,
+  title        = {Procesadores Digitales},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2011}
 }
 
-@unpublished{teach:UPV:OrganizacionComputadoras:2009sepdic,
-  title   = {Organización de Computadoras},
-  year    = {2009},
-    month = 12,
- howpublished = {UPV — sep-dic 09}
+@misc{TopicosAvanzadosSistemas_ago_2011,
+  title        = {Tópicos Avanzados de Ingeniería en Sistemas},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2011}
 }
 
-@unpublished{teach:UPV:POO:2009sepdic,
-  title   = {Programación Orientada a Objetos},
-  year    = {2009},
-    month = 12,
-    howpublished = {UPV — sep-dic 09}
+@misc{ProcesadoresDigitalesControl_dic_2011,
+  title        = {Procesadores Digitales y Control Secuencial},
+  howpublished = {ago-dic},
+  month        = {12},
+  year         = {2011}
 }
 
-@unpublished{teach:UPV:POO:2010eneabr,
-  title   = {Programación Orientada a Objetos},
-  year    = {2010},
-    month = 04,
-  howpublished = {UPV — ene-abr 10}
+@misc{TopicosAvanzadosIA_abr_2012,
+  title        = {Tópicos Avanzados de Inteligencia Artificial},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2012}
 }
 
-@unpublished{teach:UPV:ArquitecturaProcesadores:2010eneabr,
-  title   = {Arquitectura de Procesadores},
-  year    = {2010},
-    month = 04,
-  howpublished = {UPV — ene-abr 10}
+@misc{IngenieriaSoftware_ago_2012,
+  title        = {Ingeniería de Software},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2012}
 }
 
-@unpublished{teach:UPV:SistemasEmbebidos:2010mayago,
-  title   = {Sistemas Embebidos},
-  year    = {2010},
-    month = 08,
-  howpublished = {UPV — may-ago 10}
+@misc{ProcesadoresDigitales_dic_2012,
+  title        = {Procesadores Digitales},
+  howpublished = {ago-dic},
+  month        = {12},
+  year         = {2012}
 }
 
-@unpublished{teach:UPV:SistemasOperativos:2010mayago,
-  title   = {Sistemas Operativos},
-  year    = {2010},
-    month = 08,
-      howpublished =  {UPV — may-ago 10}
+@misc{ProcesadoresDigitalesControl_may_2013,
+  title        = {Procesadores Digitales y Control Secuencial},
+  howpublished = {ene-may},
+  month        = {05},
+  year         = {2013}
 }
 
-@unpublished{teach:UPV:ArquitecturaProcesadores:2010mayago,
-  title   = {Arquitectura de Procesadores},
-  year    = {2010},
-    month = 08,
-    howpublished =  {UPV — may-ago 10}
+@misc{TecnologiasMiddleware_dic_2013,
+  title        = {Tecnologías Middleware},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2013}
 }
 
-@unpublished{teach:UPV:SistemasEmbebidos:2011mayago,
-  title   = {Sistemas Embebidos},
-  year    = {2011},
-    month = 08,
-    howpublished = {UPV — may-ago 11}
+@misc{FundamentosSI_dic_2013,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2013}
 }
 
-@unpublished{teach:UPV:ArquitecturaProcesadores:2011agodic,
-  title   = {Arquitectura de Procesadores},
-  year    = {2011},  
-    month = 12,
-    howpublished = {UPV — ago-dic 11}
+@misc{VisionComputadora_abr_2014,
+  title        = {Visión por Computadora},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2014}
 }
 
-@unpublished{teach:UPV:SistemasEmbebidos:2011agodic,
-  title   = {Sistemas Embebidos},
-  year    = {2011},
-  month = 12,
-  howpublished = {UPV — ago-dic 11}
+@misc{ProcesadoresDigitales_ago_2014,
+  title        = {Procesadores Digitales},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2014}
 }
 
-@unpublished{teach:UPV:ArquitecturaProcesadores:2012eneabr,
-  title   = {Arquitectura de Procesadores},
-  year    = {2012},
-  howpublished = {UPV — ene-abr 12}
+@misc{FundamentosSI_dic_2014,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2014}
 }
 
-@unpublished{teach:UPV:SistemasEmbebidos:2012mayago,
-  title   = {Sistemas Embebidos},
-  year    = {2012},
-  howpublished = {UPV — may-ago 12}
+@misc{VisionComputadora_abr_2015,
+  title        = {Visión por Computadora},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2015}
 }
 
-@unpublished{teach:UPV:IntGraficacion:2012agodic,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2012},
-  howpublished = {UPV — ago-dic 12}
+@misc{ProcesamientoDistribuido_ago_2015,
+  title        = {Procesamiento Distribuido},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2015}
 }
 
-@unpublished{teach:UPV:IntGraficacion:2013eneabr,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2013},
-  howpublished = {UPV — ene-abr 13}
+@misc{FundamentosSI_dic_2015,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2015}
 }
 
-@unpublished{teach:UPV:GraficacionAvanzada:2013eneabr,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2013},
-  howpublished = {UPV — ene-abr 13}
+@misc{POO_dic_2015,
+  title        = {Programación Orientada a Objetos},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2015}
 }
 
-@unpublished{teach:UPV:GraficacionAvanzada:2013mayago,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2013},
-  howpublished = {UPV — may-ago 13}
+@misc{TopicosSelectosSistemas_dic_2015,
+  title        = {Tópicos Selectos de Ingeniería en Sistemas},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2015}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2013mayago,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2013},
-  howpublished = {UPV — may-ago 13}
+@misc{VisionComputadora_abr_2016,
+  title        = {Visión por Computadora},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2016}
 }
 
-@unpublished{teach:UPV:SistemasEmbebidos:2013mayago,
-  title   = {Sistemas Embebidos},
-  year    = {2013},
-  howpublished = {UPV — may-ago 13}
+@misc{TopicosImagenologia_ago_2016,
+  title        = {Tópicos Avanzados de Imagenología},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2016}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2013sepdic,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2013},
-  howpublished = {UPV — sep-dic 13}
+@misc{FundamentosSI_dic_2016,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2016}
 }
 
-@unpublished{teach:UPV:GraficacionAvanzada:2014eneabr,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2014},
-  howpublished = {UPV — ene-abr 14}
+@misc{ProcesadoresDigitales_dic_2016,
+  title        = {Procesadores Digitales},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2016}
 }
 
-@unpublished{teach:UPV:ProcesamientoParalelo:2014eneabr,
-  title   = {Procesamiento Paralelo y Distribuido},
-  year    = {2014},
-  howpublished = {UPV — ene-abr 14}
+@misc{VisionComputadora_abr_2017,
+  title        = {Visión por Computadora},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2017}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2014mayago,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2014},
-  howpublished = {UPV — may-ago 14}
+@misc{SeminarioIII_abr_2017,
+  title        = {Seminario III},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2017}
 }
 
-@unpublished{teach:UPV:SistemasEmbebidos:2014mayago,
-  title   = {Sistemas Embebidos},
-  year    = {2014},
-  howpublished = {UPV — may-ago 14}
+@misc{FundamentosSI_abr_2018,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2018}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2014sepdic,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2014},
-  howpublished = {UPV — sep-dic 14}
+@misc{BasesDatos_abr_2018,
+  title        = {Bases de Datos},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2018}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2015mayago,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2015},
-  howpublished = {UPV — may-ago 15}
+@misc{VisionComputadora_ago_2018,
+  title        = {Visión por Computadora},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2018}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2015sepdic,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2015},
-  howpublished = {UPV — sep-dic 15}
+@misc{FundamentosSI_dic_2018,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2018}
 }
 
-@unpublished{teach:UPV:GraficacionAvanzada:2016eneabr,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2016},
-  howpublished = {UPV — ene-abr 16}
+@misc{VisionComputadora_abr_2019,
+  title        = {Visión por Computadora},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2019}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2016mayago,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2016},
-  howpublished = {UPV — may-ago 16}
+@misc{FundamentosSI_abr_2019,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2019}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2016sepdic,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2016},
-  howpublished = {UPV — sep-dic 16}
+@misc{VisionComputadora_ago_2019,
+  title        = {Visión por Computadora},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2019}
 }
 
-@unpublished{teach:UPV:GraficacionAvanzada:2017eneabr,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2017},
-  howpublished = {UPV — ene-abr 17}
+@misc{TopicosImagenologia_ago_2019,
+  title        = {Tópicos Selectos de Imagenología},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2019}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2017mayago,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2017},
-  howpublished = {UPV — may-ago 17}
+@misc{TopicosImagenologia_dic_2019,
+  title        = {Tópicos Selectos de Imagenología},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2019}
 }
 
-@unpublished{teach:UPV:IntGraficacion:2017sepdic,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2017},
-  howpublished = {UPV — sep-dic 17}
+@misc{ProcesadoresDigitales_dic_2019,
+  title        = {Procesadores Digitales},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2019}
 }
 
-@unpublished{teach:UPV:GraficacionAvanzada:2018eneabr,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2018},
-  howpublished = {UPV — ene-abr 18}
+@misc{FundamentosSI_dic_2019,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2019}
 }
 
-@unpublished{teach:UPV:IntGraficacion:2018eneabr,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2018},
-  howpublished = {UPV — ene-abr 18}
+@misc{VisionComputadora_abr_2020,
+  title        = {Visión por Computadora},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2020}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2018mayago,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2018},
-  howpublished = {UPV — may-ago 18}
+@misc{ProcesadoresDigitales_abr_2020,
+  title        = {Procesadores Digitales},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2020}
 }
 
-@unpublished{teach:UPV:IntGraficacion:2018sepdic,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2018},
-  howpublished = {UPV — sep-dic 18}
+@misc{TopicosImagenologia_ago_2020,
+  title        = {Tópicos Selectos de Imagenología},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2020}
 }
 
-@unpublished{teach:UPV:GraficacionAvanzada:2019eneabr,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2019},
-  howpublished = {UPV — ene-abr 19}
+@misc{ProcesadoresDigitales_dic_2020,
+  title        = {Procesadores Digitales},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2020}
 }
 
-@unpublished{teach:UPV:IntGraficacion:2019eneabr,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2019},
-  howpublished = {UPV — ene-abr 19}
+@misc{FundamentosSI_dic_2020,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2020}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2019mayago,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2019},
-  howpublished = {UPV — may-ago 19}
+@misc{VisionComputadora_abr_2021,
+  title        = {Visión por Computadora},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2021}
 }
 
-@unpublished{teach:UPV:IntGraficacion:2019sepdic,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2019},
-  howpublished = {UPV — sep-dic 19}
+@misc{TopicosImagenologia_ago_2021,
+  title        = {Tópicos Selectos de Imagenología},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2021}
 }
 
-@unpublished{teach:UPV:GraficacionAvanzada:2020eneabr,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2020},
-  howpublished = {UPV — ene-abr 20}
+@misc{FundamentosSI_dic_2021,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2021}
 }
 
-@unpublished{teach:UPV:IntGraficacion:2020eneabr,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2020},
-  howpublished = {UPV — ene-abr 20}
+@misc{ProcesadoresDigitales_abr_2022,
+  title        = {Procesadores Digitales},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2022}
 }
 
-@unpublished{teach:ULSA:AdquisicionImagenes:2020enemay,
-  title   = {Adquisición y Procesamiento de Imágenes},
-  year    = {2020},
-  howpublished = {ULSA — ene-may 20}
+@misc{TopicosImagenologia_ago_2022,
+  title        = {Tópicos Selectos de Imagenología},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2022}
 }
 
-@unpublished{teach:UPV:ComputoMovil:2020mayago,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2020},
-  howpublished = {UPV — may-ago 20}
+@misc{FundamentosSI_dic_2022,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2022}
 }
 
-@unpublished{teach:UPV:LenguajesAutomatas:2020sepdic,
-  title   = {Lenguajes y Autómatas},
-  year    = {2020},
-  howpublished = {UPV — sep-dic 20}
+@misc{TopicosSelectosSistemas_dic_2022,
+  title        = {Tópicos Selectos de Ingeniería en Sistemas},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2022}
 }
 
-@unpublished{teach:UPV:FPOO:2021eneabr,
-  title   = {Fundamentos de Programación Orientada a Objetos},
-  year    = {2021},
-  howpublished = {UPV — ene-abr 21}
+@misc{ProcesadoresDigitales_abr_2023,
+  title        = {Procesadores Digitales},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2023}
 }
 
-@unpublished{teach:UPV:ProgramacionMovil:2021mayago,
-  title   = {Programación Móvil},
-  year    = {2021},
-  howpublished = {UPV — may-ago 21}
+@misc{TopicosImagenologia_ago_2023,
+  title        = {Tópicos Selectos de Imagenología},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2023}
 }
 
-@unpublished{teach:UPV:LenguajesAutomatas:2021sepdic,
-  title   = {Lenguajes y Autómatas},
-  year    = {2021},
-  howpublished = {UPV — sep-dic 21}
+@misc{FundamentosSI_dic_2023,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2023}
 }
 
-@unpublished{teach:UPV:ProgramacionMovil:2021sepdic,
-  title   = {Programación Móvil},
-  year    = {2021},
-  howpublished = {UPV — sep-dic 21}
+@misc{ProcesadoresDigitales_abr_2024,
+  title        = {Procesadores Digitales},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2024}
 }
 
-@unpublished{teach:UPV:SistemasInteligentes:2022eneabr,
-  title   = {Sistemas Inteligentes},
-  year    = {2022},
-  howpublished = {UPV — ene-abr 22}
+@misc{TopicosSelectosSistemas_ago_2024,
+  title        = {Tópicos Selectos de Ingeniería en Sistemas},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2024}
 }
 
-@unpublished{teach:UPV:ProgramacionMovil:2022mayago,
-  title   = {Programación Móvil},
-  year    = {2022},
-  howpublished = {UPV — may-ago 22}
+@misc{FundamentosSI_dic_2024,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {sep-dic},
+  month        = {12},
+  year         = {2024}
 }
 
-@unpublished{teach:UPV:ProgramacionMovil:2022sepdic,
-  title   = {Programación Móvil},
-  year    = {2022},
-  howpublished = {UPV — sep-dic 22}
+@misc{ProcesadoresDigitales_abr_2025,
+  title        = {Procesadores Digitales},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2025}
 }
 
-@unpublished{teach:UPV:POO:2022sepdic,
-  title   = {Programación Orientada a Objetos},
-  year    = {2022},
-  howpublished = {UPV — sep-dic 22}
+@misc{TopicosSelectosSistemas_ago_2025,
+  title        = {Tópicos Selectos de Ingeniería en Sistemas},
+  howpublished = {may-ago},
+  month        = {08},
+  year         = {2025}
 }
 
-@unpublished{teach:UPV:LenguajesAutomatas:2023eneabr,
-  title   = {Lenguajes y Autómatas},
-  year    = {2023},
-  howpublished = {UPV — ene-abr 23}
+@misc{FundamentosSI_abr_2026,
+  title        = {Fundamentos de Sistemas de Información},
+  howpublished = {ene-abr},
+  month        = {04},
+  year         = {2026}
 }
-
-@unpublished{teach:UPV:SistemasInteligentes:2023mayago,
-  title   = {Sistemas Inteligentes},
-  year    = {2023},
-  howpublished = {UPV — may-ago 23}
-}
-
-@unpublished{teach:UPV:FPOO:2023mayago,
-  title   = {Fundamentos de Programación Orientada a Objetos},
-  year    = {2023},
-  howpublished = {UPV — may-ago 23}
-}
-
-@unpublished{teach:UPV:ProgramacionMovil:2023sepdic,
-  title   = {Programación Móvil},
-  year    = {2023},
-  howpublished = {UPV — sep-dic 23}
-}
-
-@unpublished{teach:UPV:LenguajesAutomatas:2024eneabr,
-  title   = {Lenguajes y Autómatas},
-  year    = {2024},
-  howpublished = {UPV — ene-abr 24}
-}
-
-@unpublished{teach:UPV:ProgramacionMovil:2024eneabr,
-  title   = {Programación Móvil},
-  year    = {2024},
-  howpublished = {UPV — ene-abr 24}
-}
-
-@unpublished{teach:UPV:POO:2024mayago,
-  title   = {Programación Orientada a Objetos},
-  year    = {2024},
-  howpublished = {UPV — may-ago 24}
-}
-
-@unpublished{teach:UPV:SistemasInteligentes:2024mayago,
-  title   = {Sistemas Inteligentes},
-  year    = {2024},
-  howpublished = {UPV — may-ago 24}
-}
-
-@unpublished{teach:UPV:ProgramacionMovil:2024sepdic,
-  title   = {Programación Móvil},
-  year    = {2024},
-  howpublished = {UPV — sep-dic 24}
-}
-
-@unpublished{teach:UPV:SistemasInteligentes:2025eneabr,
-  title   = {Sistemas Inteligentes},
-  year    = {2025},
-  howpublished = {UPV — ene-abr 25}
-}
-
-@unpublished{teach:UPV:ProgramacionMovil:2025mayago,
-  title   = {Programación Móvil},
-  year    = {2025},
-  howpublished = {UPV — may-ago 25}
-}
-
-@unpublished{teach:UPV:ProyectoIntegradorI:2025mayago,
-  title   = {Proyecto Integrador I},
-  year    = {2025},
-  howpublished = {UPV — may-ago 25}
-}
-
-@unpublished{teach:UPV:DesarrolloAppsMoviles:2025sepdic,
-  title   = {Desarrollo de Aplicaciones Móviles},
-  year    = {2025},
-  howpublished = {UPV — sep-dic 25}
-}
-
-% 2026
-
-@unpublished{teach:UPV:SistemasInteligentes:2026eneabr,
-  title   = {Sistemas Inteligentes},
-  year    = {2026},
-  howpublished = {UPV — ene-abr 26}
-}
-
-@unpublished{teach:UPV:DesarrolloAppsMoviles:2026eneabr,
-  title   = {Desarrollo de Aplicaciones Móviles},
-  year    = {2026},
-  howpublished = {UPV — ene-abr 26}
-}
-
